...
                <MaterialCommunityIcons
                  name={focused ? "auto-fix" : "auto-fix"}
                  size={26}
                  color={color}
                />
              ),
              tabBarAccessibilityLabel: "tab-discover",
            }}
          />
          {/* İzleme Listesi / Watchlist */}
          <Tabs.Screen
            name="watchlist"
            options={{
...
